# sharik-digital-site

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  skills-lock.json  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/privacy/: page.tsx
bot/: .env.example  .gitignore  README.md  __init__.py  __main__.py  app.py  config.py  flow.py  handlers.py  keyboards.py  messages.py  models.py  pyproject.toml  storage.py
bot/tests/: .gitignore  test_config.py  test_flow.py  test_imports.py  test_messages.py  test_storage.py
components/: CasesSection.tsx  ContactForm.tsx  Header.tsx  PreAuditForm.tsx  ProcessSection.tsx  icons.tsx  ui.tsx
data/: cases.ts  site.ts
docs/: bot-flow.md  cloudflare-pages-leads.md  cloudflare-worker-bot.md  codex-prompt.md  deploy.md
docs/superpowers/plans/: 2026-07-01-sharik-digital-bot-mvp.md
functions/api/: lead.ts
output/: dev.err  start.err
workers/telegram-bot/: README.md  package.json  wrangler.toml.example
workers/telegram-bot/migrations/: 0001_init.sql
workers/telegram-bot/src/: cases.ts  index.ts  keyboards.ts  state.ts  telegram.ts  texts.ts
